Add hostname alias to php-fpm container to be compatible with Aircury's docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -172,7 +172,9 @@ services:
       depends_on:
         - workspace
       networks:
-        - backend
+        backend:
+          aliases:
+            - app
       links:
         - docker-in-docker
 
