--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -235,8 +235,10 @@ services:
       depends_on:
         - php-fpm
       networks:
-        - frontend
-        - backend
+        frontend:
+        backend:
+          aliases:
+            - schoolhub.local
 
 ### Blackfire ########################################
     blackfire:
