--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -14,7 +14,7 @@
 
 ARG LARADOCK_PHP_VERSION
 
-FROM laradock/workspace:2.2-${LARADOCK_PHP_VERSION}
+FROM aircury/workspace:2.2-${LARADOCK_PHP_VERSION}
 
 LABEL maintainer="Mahmoud Zalt <mahmoud@zalt.me>"
 
